--- a/RockPaperScissors.css
+++ b/RockPaperScissors.css
@@ -1,3 +1,28 @@
-body{
-    background: red;
+#section1{
+    display: flex;
+    justify-content: center;
+    background-color: rgb(231, 220, 220);
+    flex-wrap: wrap;
+    gap: 50px;
+}
+#header{
+    min-width: 100%;
+    text-align: center;
+    font-size: 40px;
+    color: green;
+}
+#rock{
+ padding: 20px;
+ background-color: yellow;
+ border: 2px black solid;
+}
+#paper{
+background-color: red;
+padding: 20px;
+border: 2px black solid;
+}
+#scissors{
+background-color: deeppink;
+padding: 20px;
+border: 2px black solid;
 }
